# vn30-garch-volatility

./: .gitignore  README.md  pyproject.toml
data/raw/: VN30_2015_2026.csv
notebooks/: 01_data_eda_and_preliminary_tests.ipynb
src/vn30_garch/: __init__.py  data_eda.py  garch_modeling.py  volatility_forecasting.py
