[project]
name = "vn30-garch-volatility"
version = "0.1.0"
description = "Modeling and forecasting VN30 index volatility using GARCH-family models."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "YOUR NAME" }
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "arch>=7.0",
    "scikit-learn>=1.4",
    "jupyter>=1.0",
    "notebook>=7.0",
    "ipykernel>=6.29",
    "openpyxl>=3.1",
    "streamlit>=1.35",
    "plotly>=5.20"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vn30_garch"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["src"]